--- a/src/components/PictureDetails.css
+++ b/src/components/PictureDetails.css
@@ -38,6 +38,34 @@
 
 .second-box{
     width: 100%;
-    height: 200px;
+    height: 40px;
     padding-left: 30px;
+}
+.review-box{
+    padding-left: 30px;
+    width: 100%;
+    height: 40px;
+}
+.submit-btn{
+    margin-left: 30px;
+    width: 100px;
+    font-size: larger;
+}
+#input0{
+    margin-right:20px ;
+    width: 300px;
+    height:40px;
+}
+
+#input1{
+    height: 100px;
+    width: 600px;
+}
+#show-review{
+    margin-right: 50px;
+    height: 100px;
+    width: 80%;
+}
+input{
+    font-size: 20px;
 }
