fix the problem in state of picture details and make the gallery details page with using the previos state, still by refresh state is empty

--- a/src/components/MediaCard.css
+++ b/src/components/MediaCard.css
@@ -3,6 +3,13 @@
 }
 
 .media {
-    height: 140px;
+    /*height: 200px !important;*/
 }
 
+.delete_button{
+    margin: 12px;
+}
+
+.mediaCard{
+
+}
