--- a/src/components/GalleryGridlist.css
+++ b/src/components/GalleryGridlist.css
@@ -2,15 +2,17 @@
 .sorting {
     /*height: 100px;*/
     /*width: 100px;*/
-    margin-bottom: 50px;
+    margin-bottom: 10px;
     margin-top: 50px;
 }
 
+.gallery-box{
+    width: 100%;
+}
 
-
-
-
-
+.gridList{
+    width: 100%;
+}
 
 
 
